--- a/project.css
+++ b/project.css
@@ -54,14 +54,14 @@ ul {
 .english {
   width: 1.2em;
   height: 1.2em;
-  margin-top: 8em;
+  margin-top: 8.8em;
   margin-left: 1em;
 }
 .flag {
-  width: 3em;
-  height: 3em;
-  margin-top: 7em;
+  width: 1.5em;
+  height: 1.5em;
   margin-left: 9em;
+  margin-top: 8.5em;
 }
 
 header {
@@ -140,3 +140,31 @@ display: block;
     margin-top: 4em;
 
 }
+.map {
+    width: 32em;
+    height: 21em;
+    border: 5px solid darkcyan;
+  
+}
+.address {
+  font-size: 1.3em;
+  color:darkcyan;
+  font-weight: bold;
+      margin-right: 6em;
+    margin-top: 3em;
+    line-height: 1.5;
+}
+.cardcontainer {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 5em;
+
+}
+.contact{
+     margin-top: 3em;
+    padding-top: 13em;
+    text-align: center;
+    padding-bottom: 2em;
+    color: darkcyan;
+}
+    
