--- a/project.css
+++ b/project.css
@@ -121,24 +121,43 @@ header {
 }
 .uslugi {
   display: block;
-  list-style: none;
+  list-style-type: square;
   line-height: 1.5;
   font-size: 20px;
 }
 .titleuslugi {
-  font-size: 1.2em;
+  font-size: 1.5em;
   margin-left: 4em;
-  margin-bottom: 1em;
+  margin-bottom: 1.2em;
+  justify-content: center;
+}
+
+.socialnimreji{
+list-style-type: none;
+font-size: 3em;
+color: darkcyan;
+}
+.instagram{
+  padding-left: 1em;
+}
+.linkedin{
+  padding-left: 1em;
 }
 .mreji {
-  font-size: 1.2em;
+  font-size: 1.5em;
+}
+.kntakti{
+  font-size: 1.5em;
+  margin-top: 2em;
+  text-align: center;
 }
 .contacts {
   display: block;
   list-style-type: none;
   line-height: 1.5;
   font-size: 1.2em;
-  margin-top: 4em;
+  margin-top: 2em;
+  margin-bottom: 3em;
 }
 .map {
   width: 32em;
