--- a/galery.css
+++ b/galery.css
@@ -141,7 +141,7 @@ color: darkcyan;
   padding-bottom: 2em;
   color: darkcyan;
 }
-.kntakti{
+.kontakti{
   font-size: 1.5em;
   margin-top: 2em;
   text-align: center;
