--- a/project.css
+++ b/project.css
@@ -75,7 +75,7 @@ header {
   padding: 14em;
 }
 .container {
-  margin-top: 15em
+  margin-top: 15em;
   display: flex;
   padding: 3em;
   font-size: 20px;
