--- a/header.css
+++ b/header.css
@@ -12,7 +12,7 @@ body {
 
 .diamond {
   width: 11em;
-  padding-left: 6em;
+  padding-left: 5em;
   height: 5em;
 }
 
@@ -71,4 +71,7 @@ ul {
   padding-left: 5em;
   padding-bottom: 1em;
   color: black;
+}
+a{ 
+  text-decoration: none;
 }
