--- a/main_nachalo.css
+++ b/main_nachalo.css
@@ -16,17 +16,15 @@ body {
   display: block;
 }
 .snimki {
-  width: 3em;
-  width: 30em;
+  width: 29em;
   height: 15em;
   border: 0.2em solid black;
   padding: 0.4em;
 }
-.frontgalery {
-  display: flex;
-  justify-content: space-around;
-  border-top: 2em solid darkcyan;
-  border-bottom: 2em solid darkcyan
+.frontgalery-grid{
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: auto auto auto;
 }
 .listhotel {
   padding-left: 9em;
