--- a/main_nachalo.css
+++ b/main_nachalo.css
@@ -5,12 +5,12 @@ body {
   border: 3em solid darkcyan;
 }
 .container {
-  margin-top: 2em;
-  display: flex;
-  padding: 3em;
-  font-size: 20px;
-  line-height: 1.5;
-  color: darkcyan;
+      margin-top: 2em;
+    display: flex;
+    padding: 2em;
+    font-size: 20px;
+    line-height: 1.5;
+    color: darkcyan;
 }
 .ekstri {
   display: block;
@@ -27,10 +27,15 @@ body {
   grid-template-columns: auto auto auto;
 }
 .listhotel {
-  padding-left: 9em;
+ padding-left: 10em;
+
+}
+.all {
+  width: 136em;
 }
 .hotoffer {
-  padding-left: 9em;
+    padding-left: 19em;
+    padding-right: 5em;
 }
 .cardcontainer {
   margin-top: 335px;
