--- a/home-content.css
+++ b/home-content.css
@@ -3,6 +3,7 @@ body {
   padding: 0px;
   margin: 0px;
   border: 3em solid darkcyan;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .container {
   margin-top: 2em;
@@ -21,6 +22,10 @@ body {
   height: 15em;
   border: 0.2em solid black;
   padding: 0.4em;
+}
+.snimki:hover {
+  transform: scale(1.1);
+  transition: transform .6s;
 }
 .frontgalery-grid {
   display: grid;
