--- a/main.css
+++ b/main.css
@@ -1,23 +1,43 @@
-/* header part */
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 body {
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0px;
   margin: 0px;
   border: 3em solid darkcyan;
 }
-.name {
+body a {
+  text-decoration: none;
+}
+body ul {
+  display: flex;
+  justify-content: space-between;
+}
+body header {
+  height: 10em;
+  width: 100%;
+  background-color: white;
+}
+body header .sea {
+  width: 100%;
+  height: 18em;
+  border-top: 0.3em solid darkcyan;
+  border-bottom: 0.3em solid darkcyan;
+}
+body header nav {
+  display: flex;
+  justify-content: space-between;
+}
+body header nav .name {
   color: blue;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   padding-left: 2em;
 }
-
-.diamond {
+body header nav .diamond {
   width: 11em;
   padding-left: 5em;
   height: 5em;
 }
-
-.navigation > li {
+body header nav .navigation > li {
   text-decoration: none;
   list-style-type: none;
   padding-right: 3em;
@@ -25,123 +45,72 @@ body {
   color: darkcyan;
   font-size: 1.4em;
 }
-
-.sea {
-  width: 100%;
-  height: 18em;
-  border-top: 0.3em solid darkcyan;
-  border-bottom: 0.3em solid darkcyan;
-}
-
-header {
-  height: 10em;
-  width: 100%;
-  background-color: white;
-}
-
-.sun {
+body header nav .sun {
   width: 5em;
   height: 6em;
   margin-top: 2em;
   margin-right: 3em;
 }
-
-nav {
-  display: flex;
-  justify-content: space-between;
-}
-ul {
-  display: flex;
-  justify-content: space-between;
-}
-.english {
+body header nav .english {
   width: 1.2em;
   height: 1.2em;
   margin-top: 8.8em;
   margin-left: 1em;
   border: 0.09em solid black;
 }
-.flag {
+body header nav .flag {
   width: 1.2em;
   height: 1.2em;
   margin-left: 2em;
   margin-top: 8.8em;
   border: 0.09em solid black;
 }
-.stars {
+body header nav .stars {
   padding-left: 5em;
   padding-bottom: 1em;
   color: black;
 }
-a{ 
-  text-decoration: none;
-}
-
-/* footer part */
-
-body {
-  padding: 0px;
-  margin: 0px;
-  border: 3em solid darkcyan;
-}
-
-ul {
-  display: flex;
-  justify-content: space-between;
-}
-
-/* .container {
-  margin-top: -317px;
-  display: flex;
-  padding: 3em;
-  font-size: 20px;
-  line-height: 1.5;
-  color: darkcyan;
-} */
-
-.ekstri {
+body .ekstri {
   display: block;
 }
-
-.footer {
+body .footer {
   display: flex;
   justify-content: space-around;
   color: darkcyan;
-  border-top: 2.5em solid darkcyan
+  border-top: 2.5em solid darkcyan;
 }
-.uslugi {
+body .footer .uslugi {
   display: block;
   list-style-type: square;
   line-height: 1.5;
   font-size: 20px;
 }
-.titleuslugi {
+body .footer .titleuslugi {
   font-size: 1.5em;
   margin-left: 4em;
   margin-bottom: 1.2em;
   justify-content: center;
 }
-
-.socialnimreji{
-list-style-type: none;
-font-size: 3.5em;
-color: darkcyan;
+body .footer .socialnimreji {
+  list-style-type: none;
+  font-size: 3.5em;
+  color: darkcyan;
 }
-.instagram{
+body .footer .instagram {
   padding-left: 1em;
 }
-.linkedin{
+body .footer .linkedin {
   padding-left: 1em;
 }
-.mreji {
+body .footer .mreji {
   font-size: 1.5em;
 }
-.kntakti{
+body .footer .kntakti {
   font-size: 1.5em;
   margin-top: 2em;
   text-align: center;
 }
-.contacts {
+body .footer .contacts {
   display: block;
   list-style-type: none;
   line-height: 1.5;
@@ -150,6 +119,4 @@ color: darkcyan;
   margin-bottom: 3em;
 }
 
-
-
-
+/*# sourceMappingURL=main.css.map */
