--- a/map.css
+++ b/map.css
@@ -1,5 +1,6 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 body {
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0px;
   margin: 0px;
   border: 3em solid darkcyan;
